<resources>
    <string name="app_name">The Throne Locator</string>
    <string name="_0_7km">0.7km</string>
    <string name="toilet_1">Toilet 1</string>
    <string name="navigate_button">navigate_button</string>
    <string name="navigate">Navigate</string>
    <string name="errorMissingPhoto">Please add photo of the toilet</string>
    <string name="welcome">WELCOME</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="filter_button">Filter button</string>
    <string name="add_new">Add new</string>
    <string name="searchbar_hint">Hinted search text</string>
</resources>